2003-09-11  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (handle_text_plain): Don't set inend until after
	we've appended the '\n', this fixes bug #48345. Instead of passing
	inend to handle_uuencode(), scan for a "\nend\n" and use that as
	the max end boundary - fixes bug #48184. Also don't bother
	checking lineptr against "begin ..." if inptr == inend, since it
	couldn't possibly be the start of a uuencoded blob.

2003-09-10  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_save): Allow the user to
	select any fodler for his/her Drafts and Sent folders. Fixes bug
	#45412.

2003-09-08  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-display.c (invisible_selection_clear_event_callback): Don't
	clear the clipboard. Fixes bug #48203.

2003-09-09  Not Zed  <NotZed@Ximian.com>

	* mail-send-recv.c (build_dialogue): use an eclippedlabel for
	status.  Fixed all uses.

2003-09-09  Not Zed  <NotZed@Ximian.com>

	* folder-browser.c (folder_browser_set_message_preview): clear the
	'loaded uid' when we hide, so when we re-show it reloads.

2003-09-02  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (handle_text_plain): Scan for uuencoded parts and
	show them as separate attachments if we encounter any. Works
	around Broken Mailers (tm). Also fixes bug #43808.

2003-08-28  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-display.c (on_link_clicked): Don't pass cid: nor
	thismessage: urls off to gnome_url_show(). See discussion of bug
	#47541.

2003-08-14  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-ops.c (mail_send_message): Don't abort at the first failure
	after sending (filtering, appending to Sent, syncing). Instead,
	keep a running tab of exceptions and then set a culmulative
	exception at the end to report to our caller. Also, if we fail to
	append to the account Sent folder, try again with the local Sent
	folder. Fixes bug #46512.

2003-08-19  Harry Lu  <harry.lu@sun.com>

	** For #45348
